--- a/circles.css
+++ b/circles.css
@@ -7,4 +7,19 @@ body,
 html {
   height: 100%;
   margin: 0;
+  font-family: sans-serif;
+}
+
+#info-window {
+  position: absolute;
+  left: 50%;
+  color: red;
+}
+
+#info-text {
+  position: relative;
+  left: -50%;
+  color: #eee;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
 }
